--- a/Esporte/index.html
+++ b/Esporte/index.html
@@ -26,7 +26,7 @@
             
             </section>
             <ul class="nav" id="nav">
-                <li><a href="//betim5/index.html">Página inicial</a></li>
+                <li><a href="/betim5/index.html">Página inicial</a></li>
                 <li><a href="/betim5/Entreterimento/Inicial.html">Entreterimento</a></li>
                 <li><a href="/betim5/Educação/escolas.html">Educação</a></li>
                 <li><a href="/betim5/Seguranca/Segurança.html">Segurança Pública</a></li>
